--- a/src/app/components/parts/main-mappings-new-form/main-mappings-new-form.component.html
+++ b/src/app/components/parts/main-mappings-new-form/main-mappings-new-form.component.html
@@ -87,6 +87,7 @@
   <!-- SUBMIT/CLEAR/ABORT -->
   <div class="row">
     <div class="col-4">
+      <!-- abort -->
       <button [routerLink]="['', { outlets: {primary: ['graph', dataService.selectedNetwork.id ]} }]"
               class="btn btn-block btn-outline-danger"
               data-toggle="tooltip" ngbTooltip="{{'MAIN_MAPPINGS_NEW_ABORT' | translate}}"
@@ -96,6 +97,7 @@
       </button>
     </div>
     <div class="col-4">
+      <!-- clear -->
       <button (click)="clearAllInputs()" class="btn btn-block btn-outline-warning"
               data-toggle="tooltip" ngbTooltip="{{'MAIN_MAPPINGS_NEW_CLEAR' | translate}}"
               placement="top"
@@ -104,14 +106,15 @@
       </button>
     </div>
     <div class="col-4">
-
+      <!-- submit -->
       <button
         [routerLink]="['', { outlets: {primary: ['mappings', mapType + (getNextIdForMappingType()) ]} }]"
         (click)="submitNewMapping()" *ngIf="!isEdit"
         class="btn btn-block btn-outline-success" data-toggle="tooltip"
         ngbTooltip="{{'MAIN_MAPPINGS_NEW_SUBMIT' | translate}}"
         placement="top"
-        type="button">
+        type="button"
+        [disabled]="alreadyExists">
         <fa-icon [icon]="faCheck"></fa-icon>
       </button>
       <!--        <button (click)="editMapping()" *ngIf="isEdit"-->
@@ -201,7 +204,8 @@
               class="btn btn-block btn-outline-success" data-toggle="tooltip"
               ngbTooltip="{{'MAIN_MAPPINGS_NEW_SUBMIT' | translate}}"
               placement="top"
-              type="button">
+              type="button"
+              [disabled]="alreadyExists">
         <fa-icon [icon]="faCheck"></fa-icon>
       </button>
       <button (click)="submitNewMapping()" *ngIf="!isEdit && mapType.endsWith('c')"
@@ -209,7 +213,8 @@
               class="btn btn-block btn-outline-success" data-toggle="tooltip"
               ngbTooltip="{{'MAIN_MAPPINGS_NEW_SUBMIT' | translate}}"
               placement="top"
-              type="button">
+              type="button"
+              [disabled]="alreadyExists">
         <fa-icon [icon]="faCheck"></fa-icon>
       </button>
       <!--        <button (click)="editMapping()" *ngIf="isEdit"-->
@@ -270,7 +275,8 @@
               class="btn btn-block btn-outline-success" data-toggle="tooltip"
               ngbTooltip="{{'MAIN_MAPPINGS_NEW_SUBMIT' | translate}}"
               placement="top"
-              type="button">
+              type="button"
+              [disabled]="alreadyExists">
         <fa-icon [icon]="faCheck"></fa-icon>
       </button>
       <button (click)="submitNewMapping()" *ngIf="!isEdit && (mapType.endsWith('c') || mapType.endsWith('p'))"
